# onepercent

./: alphabeticalorder.py  countvowels.py  countvowelsinwords.py  earth.py  finddoublelines.py  firstlast.py  higher.py  identical.py  lastletter.py  listwordsatoz.py  lower.py  main.py  palindgrome.py  percentageoftotal.py  pyproject.toml  sortstringatoz.py  sumquotionproduct.py  turnstringintointeger.py  wordsinasentence.py
